# YandexAlgoTrain_5

./: README.md
binary search/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp
complexity, testing, special cases/: CMakeLists.txt  task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
linear search/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
sets and dictionaries/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
